--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
       <h1 class="title">length convertor</h1>
       <form class="form">
         <input class="input-text" type="number" step="0.01" name="unit" />
-        <label
+        <label class="label"
           >unit
           <select class="size" name="size"></select>
         </label>
-        <label
+        <label class="label"
           >convert to
           <select class="convert_to" name="convert_to"></select>
         </label>
